# tuiuiu.rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: 01_counter.rs  02_dashboard.rs  03_molecules.rs
src/: lib.rs
src/atoms/: button.rs  mod.rs  progress.rs  spinner.rs  text_input.rs
src/core/: animation.rs  app.rs  capabilities.rs  component.rs  event.rs  focus.rs  hotkeys.rs  key_bindings.rs  layout.rs  mod.rs  renderer.rs  signals.rs  terminal.rs  tick.rs
src/dev_tools/: mod.rs
src/hooks/: effects.rs  focus.rs  hotkeys.rs  input.rs  mod.rs  mouse.rs  state.rs  terminal.rs
src/mcp/: mod.rs
src/molecules/: autocomplete.rs  calendar.rs  charts.rs  code.rs  mod.rs  select.rs  table.rs  tabs.rs  tree.rs
src/organisms/: mod.rs
src/primitives/: box_component.rs  canvas.rs  control_flow.rs  divider.rs  fragment.rs  mod.rs  spacer.rs  text.rs
src/templates/: mod.rs
src/themes/: mod.rs
src/utils/: ansi.rs  border.rs  cursor.rs  mod.rs  text.rs
